@@ -1,49 +1,76 @@
 package com.jongsik2.home.influxapi.service.impl;
 
+import com.influxdb.client.InfluxDBClient;
+import com.influxdb.query.dsl.Flux;
 import com.jongsik2.home.influxapi.dto.EnergyDto;
 import com.jongsik2.home.influxapi.entity.Energy;
 import com.jongsik2.home.influxapi.service.EnergyService;
 import lombok.RequiredArgsConstructor;
-import org.influxdb.dto.BoundParameterQuery;
-import org.influxdb.dto.Point;
-import org.influxdb.dto.Query;
-import org.influxdb.dto.QueryResult;
-import org.influxdb.impl.InfluxDBResultMapper;
-import org.springframework.data.influxdb.InfluxDBTemplate;
 import org.springframework.stereotype.Service;
 
+import java.time.temporal.ChronoUnit;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static com.influxdb.query.dsl.functions.restriction.Restrictions.*;
 
 @Service
 @RequiredArgsConstructor
 public class EnergyServiceImpl implements EnergyService {
-    private final InfluxDBTemplate<Point> influxDBTemplate;
+    private final InfluxDBClient influxDBClient;
+
+    private static final String BUCKET = "homeassistant";
+    private static final String MEASUREMENT = "kWh";
 
     public List<EnergyDto> energyDeviceList() {
-        InfluxDBResultMapper mapper = new InfluxDBResultMapper();
-        String s = "SELECT DISTINCT \"friendly_name_str\" AS friendly_name_str FROM kWh WHERE time > now() - 1h AND time < now() GROUP BY \"entity_id\"";
-        Query query = BoundParameterQuery.QueryBuilder.newQuery(s)
-                .forDatabase("homeassistant")
-                .create();
-        QueryResult result = influxDBTemplate.query(query);
+        Flux value = Flux.from(BUCKET)
+                .range(-1L, ChronoUnit.HOURS)
+                .filter(and(
+                        measurement().equal(MEASUREMENT),
+                        field().equal("value")))
+                .last();
+        Flux friendlyNameStr = Flux.from(BUCKET)
+                .range(-1L, ChronoUnit.HOURS)
+                .filter(and(
+                        measurement().equal(MEASUREMENT),
+                        field().equal("friendly_name_str")))
+                .last();
 
-        return mapper.toPOJO(result, Energy.class)
+        Flux query = Flux.union(value, friendlyNameStr)
+                .pivot(new String[]{"_time"}, new String[]{"_field"}, "_value")
+                .groupBy("_measurement");
+
+        return influxDBClient.getQueryApi()
+                .query(query.toString(), Energy.class)
                 .stream()
                 .map(EnergyDto::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<EnergyDto> energy(String entityId) {
-        InfluxDBResultMapper mapper = new InfluxDBResultMapper();
-        String s = "SELECT * FROM kWh WHERE time > now() - 1h AND time < now() AND \"entity_id\"='" + entityId + "' LIMIT 1";
-        Query query = BoundParameterQuery.QueryBuilder.newQuery(s)
-                .forDatabase("homeassistant")
-                .create();
-        QueryResult result = influxDBTemplate.query(query);
+        Flux value = Flux.from(BUCKET)
+                .range(-1L, ChronoUnit.HOURS)
+                .filter(and(
+                        measurement().equal(MEASUREMENT),
+                        field().equal("value"),
+                        column("entity_id").equal(entityId)
+                ));
+        Flux friendlyNameStr = Flux.from(BUCKET)
+                .range(-1L, ChronoUnit.HOURS)
+                .filter(and(
+                        measurement().equal(MEASUREMENT),
+                        field().equal("friendly_name_str"),
+                        column("entity_id").equal(entityId)
+                ));
 
-        return mapper.toPOJO(result, Energy.class).stream()
+        Flux query = Flux.union(value, friendlyNameStr)
+                .pivot(new String[]{"_time"}, new String[]{"_field"}, "_value")
+                .groupBy("_measurement")
+                .limit(10);
+
+        return influxDBClient.getQueryApi()
+                .query(query.toString(), Energy.class)
+                .stream()
                 .map(EnergyDto::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
